--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/GabrielSlPires/irgarr
+BugReports: https://github.com/GabrielSlPires/irgarr/issues
